# Landscapes

./: .gitignore  README.md  io.github.fabrialberio.landscapes.json  meson.build
data/: io.github.fabrialberio.landscapes.desktop.in  io.github.fabrialberio.landscapes.gschema.xml  io.github.fabrialberio.landscapes.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: landscapes.gresource.xml  landscapes.in  main.py  meson.build  parser.py  wallpaper_page.py  wallpaper_utils.py  window.py  window.ui
src/ui/: about-window.blp  meson.build  window.blp
